# multi-cam-sync

./: .eslintrc.json  .gitignore  Camera-Settings.bat  Multi-Cam-Sync.bat  README.md  cleanup.ps1  create-shortcut.ps1  forge.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  webpack.main.config.ts  webpack.renderer.config.ts  webpack.rules.ts
arduino/multi_camera_trigger/: multi_camera_trigger.ino
docs/: SETUP_GUIDE.md  TUTORIAL.md
python/: __init__.py  camera_manager.py  camera_settings_app.py  camera_types.py  ipc_handler.py  main.py
src/main/: arduino-manager.ts  main.ts  multi-camera-manager.ts  preload.ts  python-process.ts
src/renderer/: App.tsx  index.css  index.html  index.tsx
src/renderer/components/: CameraGrid.tsx  DeveloperModeDialog.tsx  HomePage.tsx  RecordingControls.tsx  RecordingPanel.tsx  SettingsPanel.tsx  StatusDashboard.tsx
src/types/: arduino.ts  camera.ts  electron.d.ts  recording.ts
